test/fail_compilation/imports/test2775.d
module imports.test2775;

private template bar()
{
    string bar = "bar";
}
